--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.hiccup.springframework</groupId>
+    <groupId>top.hiccup</groupId>
     <artifactId>spring-ext</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
-        <spring.version>4.3.10.RELEASE</spring.version>
+        <spring.version>4.1.4.RELEASE</spring.version>
         <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
+        <!-- springframework核心4包 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -36,27 +37,39 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- aspect相关包 -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
             <version>1.9.1</version>
         </dependency>
-
-
         <dependency>
             <groupId>aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.5.4</version>
         </dependency>
 
-
-        <!--&lt;!&ndash; mvc使用 &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>javax.servlet</groupId>-->
-            <!--<artifactId>javax.servlet-api</artifactId>-->
-            <!--<version>3.1.0</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
     </dependencies>
+
+    <build>
+        <finalName>spring-ext</finalName>
+        <!-- 打包源码路径下的资源文件 -->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xsd</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
