--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,24 @@
 
     <groupId>top.hiccup</groupId>
     <artifactId>spring-ext</artifactId>
-    <version>4.3.8-SNAPSHOT</version>
+    <version>5.2.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
-        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.version>5.2.2.RELEASE</spring.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>release</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <dependencies>
         <!-- springframework核心4包 -->
@@ -36,17 +47,12 @@
             <artifactId>spring-expression</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
         <!-- 日志门面 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
-
-
-
 
 
         <!-- aspect相关包 -->
@@ -67,8 +73,6 @@
             <version>3.1.0</version>
             <scope>provide</scope>
         </dependency>
-
-        <!-- test相关包 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -107,6 +111,14 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-resources-plugin</artifactId>-->
+<!--                <version>2.5</version>-->
+<!--                <configuration>-->
+<!--                    <encoding>UTF-8</encoding>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
