--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <properties>
         <spring.version>5.2.2.RELEASE</spring.version>
         <slf4j.version>1.7.25</slf4j.version>
+
+        <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
     </properties>
 
     <distributionManagement>
@@ -47,13 +49,13 @@
             <artifactId>spring-expression</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
         <!-- 日志门面 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
 
         <!-- aspect相关包 -->
         <dependency>
@@ -65,6 +67,17 @@
             <groupId>aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.5.4</version>
+        </dependency>
+
+
+        <!-- ================================================= -->
+        <!-- Spring Boot 框架-->
+        <!-- ================================================= -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>${spring.boot.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -79,6 +92,7 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
@@ -111,14 +125,14 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-resources-plugin</artifactId>-->
-<!--                <version>2.5</version>-->
-<!--                <configuration>-->
-<!--                    <encoding>UTF-8</encoding>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-resources-plugin</artifactId>-->
+            <!--                <version>2.5</version>-->
+            <!--                <configuration>-->
+            <!--                    <encoding>UTF-8</encoding>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
