--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <spring.version>5.2.2.RELEASE</spring.version>
+<!--        <spring.version>5.2.2.RELEASE</spring.version>-->
+        <spring.version>4.3.10.RELEASE</spring.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
     </properties>
