--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
             <version>3.1.0</version>
             <scope>provide</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
