--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+    <parent>
+        <groupId>com.jd.jr.forge</groupId>
+        <artifactId>forge-center</artifactId>
+        <version>1.1.3</version>
+    </parent>
+
+
     <groupId>top.hiccup</groupId>
     <artifactId>spring-ext</artifactId>
     <version>5.2.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
-<!--        <spring.version>5.2.2.RELEASE</spring.version>-->
-        <spring.version>4.3.10.RELEASE</spring.version>
+        <spring.version>5.2.9.RELEASE</spring.version>
+<!--        <spring.version>4.3.10.RELEASE</spring.version>-->
         <slf4j.version>1.7.25</slf4j.version>
         <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
     </properties>
@@ -69,13 +77,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
             <version>${spring.boot.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>${spring.boot.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
