--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
             <scope>test</scope>
         </dependency>
 
